# simkit-cpp

./: BoostTestHelpers.cmake  CMakeLists.txt
include/: LinearMotionModel.hpp  Model.hpp  classes.hpp  functions.hpp  runScheduler.hpp  scheduling.hpp
src/: LinearMotionModel.cpp  Model.cpp  main.cpp
test/: AddBoostTest.cmake  CMakeLists.txt  LinearMotionModel.test.cpp  Model.test.cpp  classes.test.cpp  functions.test.cpp  main.test.cpp
